kubernetes/front-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: tlc
    service: front
spec:
  selector:
    matchLabels:
      app: tlc
      service: front
  template:
    metadata:
      labels:
        app: tlc
        service: front
    spec:
      containers:
        - name: front
          image: quentinlegot/tlc-front:latest
          ports:
            - containerPort: 80
              name: "front80"
            - containerPort: 443
              name: "front443"
          volumeMounts:
            - name: front-config-pv
              mountPath: /etc/nginx/conf.d
              readOnly: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
      volumes:
        - name: front-config-pv
          persistentVolumeClaim:
            claimName: front-config-pv-claim
