kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlc-ingress
  labels:
    name: tlc
    service: ingress
spec:
  rules:
  - host: "quentinl.diverse-team.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: "/metrics"
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: "quentinl.pad.diverse-team.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: etherpad
            port:
              number: 9001
  - host: "quentinl.myadmin.diverse-team.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: myadmin
            port:
              number: 80
